--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
     <div class="particle"></div>
     <div class="particle"></div>
     <div class="container">
-        <header class="main-header">
+        <!-- <header class="main-header">
             <div class="brand">
                 <div class="logo-wrapper">
                     <div class="logo">
@@ -75,7 +75,7 @@
                     {% endif %}
                 </ul>
             </nav>
-        </header> 
+        </header>  -->
         
         <main>
             {% if messages %}
